<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/loginPageLogo"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/login_page_logo"
        android:visibility="visible"
        app:srcCompat="@drawable/dept_cse_ju"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/userLogo"
        android:layout_width="74dp"
        android:layout_height="65dp"
        android:layout_below="@+id/loginPageLogo"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/user_icon"
        app:srcCompat="@drawable/user_head" />

    <EditText
        android:id="@+id/userEmailInput"
        android:layout_width="260dp"
        android:layout_height="67dp"
        android:layout_below="@+id/loginPageLogo"
        android:layout_marginStart="110dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:hint="@string/user_email_input"
        android:inputType="text|textEmailAddress"
        android:singleLine="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal" tools:targetApi="o"/>

    <ImageView
        android:id="@+id/passwordLogo"
        android:layout_width="52dp"
        android:layout_height="53dp"
        android:layout_below="@+id/userLogo"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/key"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userEmailInput"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/password_input"
        android:singleLine="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:inputType="textPassword"
        android:autofillHints="" tools:targetApi="o"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="344dp"
        android:layout_height="61dp"
        android:layout_below="@+id/passwordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/login_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <Button
        android:id="@+id/forget_password_button"
        android:layout_width="344dp"
        android:layout_height="61dp"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/forget_password_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal" />

</RelativeLayout>