<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddStudentActivity">

    <EditText
        android:id="@+id/student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/student_name"
        android:inputType=""
        android:autofillHints="" />

    <EditText
        android:id="@+id/student_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/student_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:hint="@string/student_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/student_roll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/student_email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:hint="@string/student_roll"
        android:inputType="number" />

    <TextView
        android:id="@+id/student_session_level"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/student_roll"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="2dp"
        android:text="Session"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/student_session"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/student_roll"
        android:layout_marginStart="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"></Spinner>

    <Button
        android:id="@+id/add_student_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_student_button"
        android:layout_margin="10dp"
        android:layout_below="@+id/student_session"/>



</RelativeLayout>